--- a/Alexandre_Calculette_V2/MainWindow.xaml
+++ b/Alexandre_Calculette_V2/MainWindow.xaml
@@ -59,6 +59,7 @@
         <Button Grid.Row="2" Grid.Column="1" Name ="BTN_2" Content="2" Click="BTN_2_Click"></Button>
         <Button Grid.Row="2" Grid.Column="2" Name ="BTN_3" Content="3" Click="BTN_3_Click"></Button>
         <Button Grid.Row="2" Grid.Column="3" Name ="BTN_Racine" Content="√" Click="BTN_Racine_Click" Style="{StaticResource Mystyle}"></Button>
+        <Button Grid.Row="2" Grid.Column="4" Name ="BTN_Sin" Content="Sin" Click="BTN_Sin_Click" Style="{StaticResource Mystyle}" ></Button>
 
         <!--Paragraphe pour la quatrième ligne, bouton 4,5,6 -->
 
@@ -66,20 +67,21 @@
         <Button Grid.Row="3" Grid.Column="1" Name ="BTN_5" Content="5" Click="BTN_5_Click"></Button>
         <Button Grid.Row="3" Grid.Column="2" Name ="BTN_6" Content="6" Click="BTN_6_Click"></Button>
         <Button Grid.Row="3" Grid.Column="3" Name ="BTN_Puissance2" Content="x²" Click="BTN_Puissance_Click" Style="{StaticResource Mystyle}"></Button>
+        <Button Grid.Row="3" Grid.Column="4" Name ="BTN_Tan" Content="Tan" Click="BTN_Tan_Click" Style="{StaticResource Mystyle}" ></Button>
 
         <!--Paragraphe pour la quatrième ligne, bouton 7,8,9 et DEL-->
 
         <Button Grid.Row="4" Grid.Column="0" Name ="BTN_7" Content="7" Click="BTN_7_Click"></Button>
         <Button Grid.Row="4" Grid.Column="1" Name ="BTN_8" Content="8" Click="BTN_8_Click"></Button>
         <Button Grid.Row="4" Grid.Column="2" Name ="BTN_9" Content="9" Click="BTN_9_Click"></Button>
-        <Button Grid.Row="4" Grid.Column="3" Name ="BTN_Del" Content="DEL" Style="{StaticResource Red}" Click="BTN_Del_Click"/>
+        <Button Grid.Row="4" Grid.Column="3" Name ="BTN_Del" Content="DEL" Style="{StaticResource Red}" Click="BTN_Del_Click" Grid.ColumnSpan="2" Margin="10,10,10,10"/>
 
         <!--Paragraphe pour la quatrième ligne, bouton 0, "," PI, et = -->
 
         <Button Grid.Row="5" Grid.Column="0" Name ="BTN_0" Content="0" Click="BTN_0_Click"/>
         <Button Grid.Row="5" Grid.Column="1" Name ="BTN_Virgule" Content="," Click="BTN_Virgule_Click"></Button>
         <Button Grid.Row="5" Grid.Column="2" Name="BTN_Pi" Content="π" Click="BTN_Pi_Click" ></Button>
-        <Button Grid.Row="5" Grid.Column="3" Name ="BTN_Egale" Content="=" Style="{StaticResource Cyan}" Click="BTN_Egale_Click"/>
+        <Button Grid.Row="5" Grid.Column="3" Name ="BTN_Egale" Content="=" Style="{StaticResource Cyan}" Click="BTN_Egale_Click" Grid.ColumnSpan="2" Margin="10,10,10,10"/>
 
     </Grid>
 </Window>
